remove thingfabric addon from app.json. this version is deployed direct from ThingFabric Portal

--- a/app.json
+++ b/app.json
@@ -10,8 +10,5 @@
     "2lemetry",
     "connected enterprise"
   ],
-  "success_url":"/",
-  "addons":[
-    "thingfabric"
-  ]
+  "success_url":"/"
 }
